@@ -1,0 +1,3 @@
+package splitio
+
+const CommitSHA = "e1ecfc9"
